make sure flash message is visible when modal
Former-commit-id: bb3702cb60f2503271b7e0685f327f702fc9edf5

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -194,6 +194,8 @@ table a:hover {
   box-shadow: 3px 3px 3px #555;
 
   @include animation(bounce 1s infinite);
+  position: fixed;
+  z-index: 9999;
 }
 
 .flash#notice {
